# Snake-by-InfinitePain

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  changelog.md  dev.py  update_version.py
.devcontainer/: Dockerfile  devcontainer.json
Installers/arch_linux/: PKGBUILD
Installers/wix/: Bundle.wxs
include/: alphabet.h  app_status.h  appdata.h  collision.h  config.h  direction_buffer.h  element.h  error_message.h  food.h  header.h  input.h  letters.h  list.h  mymenu.h  position.h  snake.h  terminal.h  thread.h  timing_utils.h  wall.h
src/: alphabet.c  app_status.c  appdata.c  collision.c  config.c  direction_buffer.c  element.c  error_message.c  food.c  game.c  input.c  letters.c  list.c  mymenu.c  snake.c  snakebyip.c  terminal.c  thread.c  timing_utils.c  wall.c
tests/: test_collision.c  test_direction_buffer.c  test_element.c  test_food.c  test_input.c  test_list.c  test_snake.c
wix/: Bundle.wxs  LICENSE.rtf
